[gd_scene load_steps=6 format=3 uid="uid://vuh4qy2e3bde"]

[ext_resource type="Script" path="res://Objects/SandThrowProjectile.gd" id="1_6m4wi"]
[ext_resource type="PackedScene" uid="uid://c26utf8faeta7" path="res://Particles/SandThrow.tscn" id="2_s2uwh"]
[ext_resource type="AudioStream" uid="uid://jxjcdblt3s5i" path="res://Assets/SFX/fshssssee.mp3" id="3_46yxq"]
[ext_resource type="AudioStream" uid="uid://cuynoc4xe4d3g" path="res://Assets/SFX/phht.mp3" id="4_6oycb"]
[ext_resource type="AudioStream" uid="uid://c27nwso0psp7w" path="res://Assets/SFX/phshweeoueou.mp3" id="5_kcgb7"]

[node name="GravityProjectile" type="Area2D"]
script = ExtResource("1_6m4wi")

[node name="SandThrow" parent="." instance=ExtResource("2_s2uwh")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 20, -10, 20, 10)

[node name="SpawnPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_46yxq")

[node name="DudPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6oycb")

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kcgb7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
